# airweave

./: .codespellrc  .env.example  .gitignore  .pre-commit-config.yaml  ACL_BENCHMARK_GUIDE.md  CLAUDE.md  MIGRATION_SPEC.md  ONBOARDING_VIDEO_SERIES.md  QUICK_START_OLLAMA.md  README.md  SHARED_TASK_NOTES.md  SHAREPOINT_ENTERPRISE_ADMIN_SETUP.md  ci_run_single.py  cleanup.sh  code-chunker-integration-plan.plan.md  docker-compose.weaviate.yml  docker-compose.yml  first_vespa_test.py  monke.bat  monke.sh  sharepoint2019_test.py  start.sh  vespa-migrate.py
backend/: .coveragerc  ARCHITECTURE_REFACTOR.md  Dockerfile  Dockerfile.dev  alembic.ini  audit_entity_counts_20260330_2226.csv  audit_entity_counts_20260330_2226.json  batch_trace.txt  check_source.py  conftest.py  entrypoint.dev.sh  entrypoint.sh  list_syncs_for_migration.py  local.py  mypy_report.txt  pyproject.toml
backend/airweave/: main.py
backend/airweave/adapters/analytics/: subscriber.py
backend/airweave/adapters/cache/: fake.py  redis.py
backend/airweave/adapters/credentials/: __init__.py  azure_keyvault.py
backend/airweave/adapters/encryption/: fernet.py
backend/airweave/adapters/health/: postgres.py  redis.py  temporal.py
backend/airweave/adapters/identity/: auth0.py
backend/airweave/adapters/llm/: mistral.py  registry.py
backend/airweave/adapters/metrics/: agentic_search.py  db_pool.py  http.py  renderer.py  worker.py
backend/airweave/adapters/ocr/: __init__.py  docling.py  fallback.py  google_document_ai.py
backend/airweave/adapters/payment/: fake.py  (+1 more)
backend/airweave/analytics/: README.md  __init__.py  agentic_search_analytics.py  contextual_service.py  search_analytics.py  service.py
backend/airweave/api/: auth.py  conftest.py  context.py  context_resolver.py  deps.py  examples.py  inject.py  jwt_utils.py  middleware.py  rbac.py
backend/airweave/billing/: plan_logic.py  service.py  webhook_handler.py
backend/airweave/core/: admin_sync_service.py  billing_service.py  chat_service.py  collection_service.py  config.py  connection_service.py  context.py  context_cache_service.py  credentials.py  dag_service.py  db_pool_sampler.py  embedding_validation.py  exceptions.py  guard_rail_service.py  logging.py  metrics_service.py  oauth_service.py  organization_service.py  pubsub.py  redis_client.py  search_service.py  secrets.py  secure_keys.py  shared_models.py  source_connection_service.py  source_connection_service_helpers.py  source_rate_limiter_service.py  sync_cursor_service.py  sync_failure_service.py  sync_job_service.py  sync_service.py  temporal_service.py
backend/airweave/crud/: __init__.py  _base_organization.py  _base_public.py  _base_user.py  crud_access_control_membership.py  crud_api_key.py  crud_collection.py  crud_connection.py  crud_connection_init_session.py  crud_entity.py  crud_organization.py  crud_source_connection.py  crud_sync.py  crud_sync_connection.py  crud_sync_job.py  crud_user.py  oauth_access_token.py  oauth_authorization_code.py  oauth_client.py
backend/airweave/db/: init_db.py  session.py  unit_of_work.py
backend/airweave/graph_db/: neo4j_service.py
backend/airweave/mcp/: __init__.py  server.py
backend/airweave/models/: __init__.py  _base.py  access_control_membership.py  collection.py  connection.py  connection_init_session.py  data_tree_node.py  entity.py  entity_definition.py  node_selection.py  oauth_access_token.py  oauth_authorization_code.py  oauth_client.py  oauth_refresh_token.py  organization_billing.py  source_connection.py  sync.py  sync_connection.py  sync_job.py  user.py  user_session.py
backend/airweave/platform/: db_sync.py  decorators.py  locator.py  scheduler.py
backend/airweave/schemas/: __init__.py  collection.py  connect_session.py  entity.py  google_drive_native_search.py  invitation.py  oauth.py  organization_billing.py  search.py  search_result.py  source.py  source_connection.py  sync.py  sync_job.py  sync_multiplex.py  usage.py  user.py  user_session.py  webhooks.py
backend/airweave/search/: context.py  defaults.yml  executor.py  factory.py  orchestrator.py  search_service.py  service.py
backend/airweave/utils/: error_handling.py  input_validation.py  key_validation.py
backend/airweave/vespa/: NOTES.md  deploy.sh  docker-compose.yml
backend/airweave/webhooks/: service.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0000_baseline.py  0001_add_pause_reason_to_sync.py  0001_add_source_hash_content_hash.py  01991ee09f59_add_session_tracking_and_token_.py  24147f35a4a5_add_access_control_membership_table.py  4d8d11ed519e_add_sigv4_to_authtype_enum.py  535b39a9b0b5_add_sigv4_to_authtype_enum.py  6e39730bc45b_migrate_github_repo_name_from_auth_to_config.py  9a0ad1e89bbe_merge_heads.py  9a977647c5a4_add_is_admin_and_fix_connection_cascade.py  9ff3dddc32fe_add_execution_config_json_to_sync_job.py  a1b2c3d4e5f7_add_oauth_tables_for_mcp.py  a2b3c4d5e6f7_add_error_category_to_sync_job.py  a2b3c4d5e6f7_session_user_agent_length_limit.py  ab5c202f5d68_resolve_migration_conflicts_and_apply_.py  add_execution_config_json_to_sync_job.py  add_vector_size_to_collection.py  b2c3d4e5f6g7_add_data_tree_and_node_selection.py  b2c3d4e5f6g7_add_pause_reason_to_sync.py  b788750e60fe_add_missing_indexes_and_constraints.py  e3db4e645396_merge_vector_size_and_entity_count_heads.py  f1a2b3c4d5e6_update_entity_unique_constraint.py  h1b0c9d8e7f6_add_role_to_sync_connection.py  h1b0c9d8e7f6_add_source_connection_failure_tracking.py  n7o8p9q0r1s2_add_sync_config_columns.py  o8p9q0r1s2t3_add_collection_id_to_entity.py  s5t6u7v8w9x0_add_embedding_config_to_collection.py
backend/app/core/: config.py
backend/scripts/: audit_entity_counts.py  backfill_arf_manifests.py  clear_annotations.py  debug_sce.py  manual_stripe_pro_flow.py  preflight_check_model_indexes.py  run_sce_workflow.py  watch_workers.py
backend/tests/e2e/: conftest.py  requirements.txt
backend/tests/integration/: conftest.py
backend/tests/live_integration/: test_gemini_multimodal_live.py
search-scoring-vis/: README.md  pyproject.toml  qdrant_vis.py
(+2377 files in other folders)
