[tool.poetry]
name = "airweave"
version = "0.1.0"
description = "Make any app searchable - Universal search and agent integration tool"
authors = [
    "Rauf Akdemir <rauf@airweave.ai>",
    "Lennert Jansen <lennert@airweave.ai>",
]
packages = [{ include = "airweave" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.135.1"
uvicorn = { extras = ["standard"], version = "^0.41.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.48" }
alembic = "^1.18.4"
asyncpg = "^0.31.0"
pydantic = { extras = ["email"], version = "^2.5.3" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.22"
python-dotenv = "^1.2.2"
httpx = "^0.28.0"
httpx-ntlm = "^1.4.0"
ldap3 = "^2.9.1"
redis = "^7.2.1"
tenacity = "^9.1.4"
structlog = "^25.5.0"
pydantic-settings = "^2.13.1"
psycopg2-binary = "^2.9.10"
weaviate = "^0.1.2"
weaviate-client = "^4.20.1"
markitdown = "^0.1.5"
neo4j = "^6.1.0"
pyodbc = "^5.2.0"
aiomysql = "^0.3.2"
aiosqlite = "^0.22.1"
aioodbc = "^0.5.0"
oracledb = "^3.4.2"
aiofiles = "^25.1.0"
croniter = "^6.0.0"
openai = "^2.24.0"
mistralai = "^1.12.4"
tiktoken = "^0.12.0"
fastapi-auth0 = "^0.5.0"
chardet = "^6.0.0"
anthropic = "^0.84.0"
azure-keyvault = "^4.2.0"
firecrawl-py = "^4.18.0"
temporalio = "^1.23.0"
azure-storage-blob = "^12.25.1"
azure-identity = "^1.25.2"
aioboto3 = "^15.5.0"
posthog = "^7.9.6"
aiolimiter = "^1.1.0"
pyyaml = "^6.0.1"
fastembed = "^0.7.1"
stripe = "^14.4.0"
tabulate = "^0.9.0"
fpdf2 = "^2.8.7"
pdfminer-six = "^20260107"
pypdf2 = "^3.0.0"
pymupdf = "^1.27.1"
resend = "^2.23.0"
groq = "^1.0.0"
cohere = "^5.20.7"
cerebras-cloud-sdk = "^1.50.1"
cryptography = "^46.0.5"
aiohttp = "^3.9.0"
html-to-markdown = "^2.27.2"
python-docx = "^1.2.0"
python-pptx = "^1.0.2"
openpyxl = "^3.1.5"
pillow = "^11.0.0"
chonkie = {extras = ["code", "semantic"], version = "^1.5.6"}
prometheus-client = "^0.24.1"
psutil = "^7.2.2"
pyvespa = "^1.1.1"
svix = "^1.86.0"
pyjwt = "^2.10.1"
mistral_common = {version = "1.9.1", extras = ["sentencepiece"]}
google-cloud-storage = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.6.1"
black = "^26.1.0"
isort = "^8.0.1"
mypy = "^1.8.0"
ruff = "^0.15.4"
pre-commit = "^4.5.1"
httpx = "^0.28.0"
faker = "^40.5.1"
aioresponses = "^0.7.6"
types-python-jose = "^3.3.4"
types-passlib = "^1.7.7"
mcp = "^1.26.0"
vulture = "^2.10"
watchfiles = "^1.1.0"
debugpy = "^1.8.16"
import-linter = "^2.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
extend_skip = ["backend (old, neena, only for inspiration)"]


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic", "local.py", "fern/**", "tests"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "D", # flake8-docstrings
]
ignore = [
    "B008",  # ignore fastapi dependency injection warning
    "B904",  # ignore raise-without-from within except clauses
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "airweave"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=airweave --cov-report=term-missing --cov-report=xml:coverage.xml"
markers = [
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
    "live_integration: mark a test as requiring live cloud infrastructure",
    "e2e: mark a test as an end-to-end test",
    "slow: mark a test as slow running",
]
extend-exclude = ["backend (old, neena, only for inspiration)"]

[tool.importlinter]
root_package = "airweave"

# TODO: Re-enable once services are fully migrated to receive deps via parameters
# [[tool.importlinter.contracts]]
# name = "Container access restricted to entry points"
# type = "protected"
# protected_modules = ["airweave.core.container"]
# allowed_importers = [
#     "airweave.api.deps",
#     "airweave.main",
#     "airweave.platform.temporal.worker",
#     "airweave.platform.temporal.worker.wiring",
# ]
