[tool.poetry]
name = "airweave"
version = "0.1.0"
description = "Make any app searchable - Universal search and agent integration tool"
authors = [
    "Rauf Akdemir <rauf@airweave.ai>",
    "Lennert Jansen <lennert@airweave.ai>",
]
packages = [{ include = "airweave" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = "^0.136.0"
uvicorn = { extras = ["standard"], version = "^0.46.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.49" }
alembic = "^1.18.4"
asyncpg = "^0.31.0"
pydantic = { extras = ["email"], version = "^2.13.3" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.26"
python-dotenv = "^1.2.2"
httpx = "^0.28.0"
httpx-ntlm = "^1.4.0"
ldap3 = "^2.9.1"
redis = "^7.4.0"
tenacity = "^9.1.4"
structlog = "^25.5.0"
pydantic-settings = "^2.14.0"
psycopg2-binary = "^2.9.12"
markitdown = "^0.1.5"
neo4j = "^6.1.0"
pyodbc = "^5.2.0"
aiomysql = "^0.3.2"
aiosqlite = "^0.22.1"
aioodbc = "^0.5.0"
oracledb = "^3.4.2"
aiofiles = "^25.1.0"
croniter = "^6.2.2"
openai = "^2.32.0"
mistralai = "^2.4.1"
tiktoken = "^0.12.0"
fastapi-auth0 = "^0.5.0"
chardet = "^7.4.3"
anthropic = "^0.96.0"
azure-keyvault = "^4.2.0"
firecrawl-py = "^4.23.0"
temporalio = "^1.26.0"
azure-storage-blob = "^12.25.1"
azure-identity = "^1.25.3"
aioboto3 = "^15.5.0"
posthog = "^7.13.0"
aiolimiter = "^1.1.0"
pyyaml = "^6.0.1"
fastembed = "^0.8.0"
stripe = "^15.0.1"
tabulate = "^0.9.0"
fpdf2 = "^2.8.7"
pdfminer-six = "^20260107"
pypdf2 = "^3.0.0"
pymupdf = "^1.27.2"
resend = "^2.29.0"
groq = "^1.2.0"
cohere = "^5.21.1"
cerebras-cloud-sdk = "^1.50.1"
together = "^2.9.0"
cryptography = "^46.0.7"
aiohttp = "^3.13.5"
html-to-markdown = "^3.3.2"
python-docx = "^1.2.0"
python-pptx = "^1.0.2"
olefile = "^0.47"
openpyxl = "^3.1.5"
pillow = "^12.2.0"
chonkie = {extras = ["code", "semantic"], version = "^1.6.4"}
prometheus-client = "^0.25.0"
psutil = "^7.2.2"
pyvespa = "^1.1.2"
svix = "^1.92.2"
pyjwt = "^2.12.1"
mistral_common = {version = "1.11.0", extras = ["sentencepiece"]}
google-cloud-storage = "^3.10.1"
authlib = ">=1.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
pytest-xdist = "^3.6.1"
black = "^26.3.1"
isort = "^8.0.1"
mypy = "^1.20.2"
pre-commit = "^4.6.0"
httpx = "^0.28.0"
faker = "^40.15.0"
aioresponses = "^0.7.6"
types-python-jose = "^3.5.0"
types-passlib = "^1.7.7"
mcp = "^1.27.0"
vulture = "^2.16"
watchfiles = "^1.1.0"
debugpy = "^1.8.16"
types-croniter = "^6.2.2.20260408"
[tool.poetry.group.lint.dependencies]
ruff = "^0.15.11"
diff-cover = "^10.2"
import-linter = "^2.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
extend_skip = ["backend (old, neena, only for inspiration)"]


[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[[tool.mypy.overrides]]
module = [
    "airweave.*.tests.*",
    "airweave.*.*.tests.*",
    "airweave.*.*.*.tests.*",
    "airweave.*.fakes.*",
    "airweave.*.*.fakes.*",
]
disallow_untyped_defs = false
disable_error_code = ["arg-type", "method-assign", "call-arg", "assignment"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["alembic", "local.py", "fern/**", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "D",      # flake8-docstrings
    "PLC0415", # import-outside-top-level
    "S311",    # flake8-bandit: pseudo-random generators
]
ignore = [
    "B008",  # ignore fastapi dependency injection warning
    "B904",  # ignore raise-without-from within except clauses
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"**/tests/**" = ["D100", "D101", "D102", "D103", "D107"]
"**/fakes/**" = ["D102", "D107"]
"**/handlers/**" = ["D102"]
"**/fake.py" = ["D102", "D107"]
"**/sources/stub.py" = ["S311"]
"**/sources/file_stub.py" = ["S311"]
"**/sources/incremental_stub.py" = ["S311"]
"**/sources/timed.py" = ["S311"]
"**/search/providers/mistral.py" = ["S311"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "airweave"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=airweave --cov-report=term-missing --cov-report=xml:coverage.xml"
markers = [
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
    "live_integration: mark a test as requiring live cloud infrastructure",
    "e2e: mark a test as an end-to-end test",
    "slow: mark a test as slow running",
]
extend-exclude = ["backend (old, neena, only for inspiration)"]

[tool.importlinter]
root_package = "airweave"

# TODO: Re-enable once services are fully migrated to receive deps via parameters
# [[tool.importlinter.contracts]]
# name = "Container access restricted to entry points"
# type = "protected"
# protected_modules = ["airweave.core.container"]
# allowed_importers = [
#     "airweave.api.deps",
#     "airweave.main",
#     "airweave.domains.temporal.worker",
#     "airweave.domains.temporal.worker.wiring",
# ]
