[project]
name = "search-scoring-vis"
version = "0.1.0"
description = ""
authors = [
    {name = "Gilles Magalhaes",email = "gilles.magalhaes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio (>=5.42.0,<6.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "qdrant-client (>=1.15.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
